# air-blackbox-mcp

./: .gitignore  EVAL_BENCHMARK_DELIVERY.md  INSTALL.md  README.md  air_blackbox_mcp_demo.tape  demo_gif.py  growth-strategy.md  pyproject.toml  serve.py  server.json
air_blackbox_mcp/: __init__.py  __main__.py  report_generator.py  scanner.py  server.py  telemetry.py
applications/: cncf-landscape-application.md  gartner-market-guide-submission.md
content/: awesome-list-targets.md  devto-article-scanning-agents.md  framework-outreach-emails.md  show-hn-submission.md
reports/: state-of-ai-agent-compliance-2026.md
tests/: test_real_projects.py  test_scanner_full.py
training/: 00-START-HERE.txt  EVAL_IMPLEMENTATION_GUIDE.md  EVAL_INDEX.md  EVAL_QUICK_REFERENCE.md  EVAL_README.md  EVAL_SCRIPT_SUMMARY.md  EXPANSION_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  MANIFEST.txt  QUICK_START.md  README.md  README_EXPANSION.md  eval_benchmark.py  eval_data.jsonl  eval_data_combined.jsonl  eval_data_v2.jsonl  eval_results.json  generate_training_data.py  generate_training_data_v2.py  merge_datasets.py  training_data_combined.jsonl  training_data_expanded.jsonl  training_data_v2.jsonl
