[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "air-blackbox-mcp"
version = "1.0.0"
description = "MCP server for EU AI Act compliance scanning — tool-agnostic scanner for Python AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Jason Shotwell", email = "jason@airblackbox.ai" }]
keywords = ["mcp", "eu-ai-act", "compliance", "ai-governance", "langchain", "crewai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://airblackbox.ai"
Repository = "https://github.com/airblackbox/air-blackbox-mcp"
Documentation = "https://airblackbox.ai"

[project.scripts]
air-blackbox-mcp = "air_blackbox_mcp:main"
