[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "air-blackbox-mcp"
version = "0.1.0"
description = "MCP server for EU AI Act compliance scanning — scan, analyze, remediate, and protect AI agent code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Jason Shotwell", email = "jason.j.shotwell@gmail.com"}]
keywords = ["eu-ai-act", "compliance", "mcp", "ai-safety", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
ollama = ["ollama"]

[project.urls]
Homepage = "https://github.com/airblackbox/air-blackbox-mcp"
Documentation = "https://airblackbox.ai"
Repository = "https://github.com/airblackbox/air-blackbox-mcp"
